# RX160

./: README.md
rx160_description/: CMakeLists.txt
rx160_description/launch/: test_rx160.launch
rx160_description/urdf/: gripper_2f.xacro  rx160.xacro  rx160_macro.xacro
rx160_gazebo/: CMakeLists.txt
rx160_gazebo/launch/: basic_spawner.launch  load_rx160.launch  rx160_control.launch  rx160_gazebo.launch  spawn_rx160.launch
rx160_gazebo/urdf/: gazebo_staubli_rx160.urdf  gazebo_staubli_rx160_gazebo.urdf  irb120_robotiq85_macro.xacro  rx160.urdf  rx160.xacro  rx160_2f.xacro  rx160_transmission.xacro
rx160_master/: CMakeLists.txt
rx160_master/src/: jtc_node.py
rx160_moveit/: .setup_assistant  CMakeLists.txt
rx160_moveit/config/: fake_controllers.yaml  gazebo_staubli_rx160_gazebo.urdf  joint_limits.yaml  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  staubli_rx160_gazebo.srdf  stomp_planning.yaml
rx160_moveit/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
